--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Simple quote page</title>
+  <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="simple.css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">
@@ -10,10 +10,10 @@
 <body>
 		
 		
-	<div class="wrapper">
+<div class="wrapper">
 		<p class="quote">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want.</p>
 		<p class="author"><small>– Jean-Jacques Rousseau</small></p>
-	</div>
+</div>
 	  
   
 
